<resources>
    <string name="app_name">Seeker</string>
    <string name="internet">Failed to load request. Please check your internet connection and try again.</string>


    <!--Login-->
    <string name="loginText">Login</string>
    <string name="forgotPswrdText">Forgot Password?</string>
    <string name="emailHintText">Email</string>
    <string name="passwordHintText">Password</string>
    <string name="enterUsernameText">Please enter your username.</string>
    <string name="enterPswrdText">Please enter your password.</string>
    <string name="pswrdMustContainsText">The password must contain 8-32 characters </string>
    <string name="eula">I agree to the terms and conditions of service.</string>
    <string name="eula_header">Terms &amp; conditions</string>


    <!--Change Password-->
    <string name="currentPswrdText">Current Password</string>
    <string name="newPswrdText">New Password</string>
    <string name="confirmPswrdText">Confirm Password</string>
    <string name="changePswrdText">Change Password</string>
    <string name="cancelText">Cancel</string>
    <string name="enterCurrentPass">Please enter current password</string>
    <string name="enterNewPass">Please enter new password</string>
    <string name="enterConfirmPass">Please enter confirm password</string>
    <string name="passwordNotMatch">Password not matched.</string>
    <string name="currentAndNewPssNotSame">Current and New password should not be same.</string>
    <string name="pleaseagreeforEULA">Kindly agree to the terms and conditions of service.</string>


    <!--Map View-->
    <string name="searchText">Search</string>
    <string name="twoMiles">2 Miles</string>
    <string name="fiveMiles">5 Miles</string>
    <string name="tenMiles">10 Miles</string>
    <string name="twentyMiles">20 Miles</string>
    <string name="mapText">Map</string>
    <string name="listText">List</string>


    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>


    <!--Menu Slider-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="nav_drawer_labels">
        <item>Nearby Posts</item>
        <item>Draw Area</item>
        <item>Saved Areas</item>
        <!--<item>My Keywords</item>-->
        <item>Saved Profiles</item>
        <item>Notifications</item>
        <!--<item>Activity Report</item>-->
        <item>Legal Correspondence</item>
        <item>Profile</item>
        <item>Help &amp; Support</item>
        <item>Logout</item>
    </string-array>
    <string name="header_title">Header</string>
    <!--Drawer-->
    <string name="menu">Menu</string>

    <!--Filter Screen-->
    <string name="applytext">Apply</string>
    <string name="filtertext">Filter</string>
    <string name="datetext">Date</string>
    <string name="filterbydate">Filter By Date</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="networktext">Network</string>
    <string name="fbtext">Facebook</string>
    <string name="meetUpText">MeetUp</string>
    <string name="twittertext">Twitter</string>
    <string name="youtubetext">Youtube</string>
    <string name="Instatext">Instagram</string>
    <string name="flicktext">Flickr</string>
    <string name="tumblrtext">Tumblr</string>
    <string name="vinetext">Vine</string>
    <string name="vktext">VK</string>
    <string name="distext">Disqus</string>
    <string name="keywordtxt">Keywords</string>
    <string name="filterkeyword">Filter By Keyword</string>
    <string name="clrFilterText">Clear Filters</string>

    <!--Landing Screen-->
    <string name="landingmiddletext">Search or Select a Location.</string>


    <!--Notification Screen-->
    <string name="notificationtxt">Receive Notifications</string>
    <string name="notificationlisttxt">New Message was posted by the user on FaceBook that includes word Gun in it</string>


    <!--My Profile-->
    <string name="nameText">Name</string>
    <string name="emailText">Email</string>
    <string name="userNameText">Username</string>
    <string name="currentLocationText">Current Location</string>
    <string name="termAndConditionsTExt"><u>Privacy Policy</u></string>
    <string name="pleaseAgreeTermsText">Please agree to Terms &amp; Conditions.</string>
    <string name="uploading">Profile updating.</string>
    <string name="upload_success">Upload completed successfully</string>
    <string name="upload_error">Error while uploading</string>

    <!--Forgot Password-->
    <string name="forgotPassText">Please enter your email address to receive your password.</string>
    <string name="submitText">Submit</string>
    <string name="backToLoginText">Back To Login</string>
    <string name="pleaseEnterEmail">Please enter email</string>
    <string name="pleaseEnterValidEmail">Please enter valid email</string>

    <!--Followed Profile -->
    <string name="nameTextWithColon">Name:</string>
    <string name="locationTextWithColon">Location:</string>


    <!--Plot Map-->
    <string name="nameThisAreaText">Name this Area</string>


    <!--Add Followed-->
    <string name="addFollowedtext">Add Followed</string>
    <string name="usertext">User</string>
    <string name="entrkeyword">Enter keyword</string>

    <!--My Areas-->
    <string name="locationAlreadySavedText">Location already saved.</string>

    <!--Post Details Screen-->
    <string name="postText">Post</string>
    <string name="areUSureWantToBlockThis">Are you sure want to block this post?</string>

    <!--Crash-->
    <string name="CrashReport_MailSubject">Crash Exceptions</string>
    <string name="CrashReport_MailBody">Hello Developer</string>
    <string name="somethingWentWrongText">Oops something went wrong. Please drop an email to Developer.</string>
    <string name="okText">Okay</string>


</resources>
