<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <RelativeLayout
        android:id="@+id/main_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/seeker_logo_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ets_rl"
            android:layout_marginBottom="15dp"
            android:src="@mipmap/login_logo"

            />

        <RelativeLayout
            android:id="@+id/ets_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"

            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/info_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/forgotPassText"
                android:textColor="#000" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_tv"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginuser"
                android:hint="@string/emailHintText"
                android:inputType="textEmailAddress"
                android:paddingLeft="35dp"
                android:singleLine="true"
                android:textColor="#000" />


            <Button

                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_et"
                android:layout_marginTop="16dp"
                android:background="@color/login_btn_bg_color"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/submitText"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/backToLogin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ets_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/backToLoginText"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/login_powered_by" />
    </RelativeLayout>
</RelativeLayout>