<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/lightGrey"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/blue_bg"
                    android:layout_width="match_parent"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/profile"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/user_img_iv"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="120dp"
                    android:layout_width="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:src="@drawable/profile_pic"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/currentPswrdText"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fields"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/newPswrdText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fields"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/confirmPswrdText"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fields"

                    />

                <Button

                    android:layout_marginTop="16dp"

                    android:id="@+id/chnge_pswd_btn"
                    android:textSize="16sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/changePswrdText"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:background="@color/login_btn_bg_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:paddingBottom="40dp"
                    android:layout_height="wrap_content">
                    <Button

                        android:layout_marginTop="16dp"

                        android:id="@+id/cancel_btn"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/cancelText"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:background="@color/cancel_btn_bg_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>