<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_btn_bg_color"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/et_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedwhite"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <EditText
                android:id="@+id/search_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@mipmap/search_icon"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:hint="@string/searchText"
                android:singleLine="true" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/refresh_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/refresh_icon"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/header">

        <LinearLayout
            android:id="@+id/map_layout"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <RelativeLayout

                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/miles_btn_ll"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:visibility="visible"></RelativeLayout>

            <RelativeLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"

                android:visibility="gone">

                <com.tv.seekers.utils.XListView
                    android:id="@+id/listView_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></com.tv.seekers.utils.XListView>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/no_post_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@color/colorPrimary"

                android:gravity="center"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/no_loc_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/no_loc_icon" />

                <TextView
                    android:id="@+id/sorry_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/no_loc_iv"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="Sorry!"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/no_post_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sorry_tv"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="No post found!"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/miles_btn_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"

            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/top_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:divider="?android:listDivider"
                android:dividerPadding="2.5dp"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:weightSum="4">

                <Button
                    android:id="@+id/two_miles_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/twoMiles"
                    android:textAllCaps="false"

                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/five_miles_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/miles_inactive_color"
                    android:text="@string/fiveMiles"
                    android:textAllCaps="false"
                    android:textColor="#7e7e7e" />

                <Button
                    android:id="@+id/ten_miles_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/miles_inactive_color"
                    android:text="@string/tenMiles"
                    android:textAllCaps="false"
                    android:textColor="#7e7e7e" />

                <Button
                    android:id="@+id/twenty_miles_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/miles_inactive_color"
                    android:text="@string/twentyMiles"
                    android:textAllCaps="false"
                    android:textColor="#7e7e7e" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@mipmap/top_divider" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:divider="?android:listDivider"
            android:dividerPadding="2.5dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="2">

            <Button
                android:id="@+id/map_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/mapText"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/list_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/miles_inactive_color"
                android:text="@string/listText"
                android:textAllCaps="false"
                android:textColor="#7e7e7e"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>