<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/blue_bg"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/profile" />

                <ImageView
                    android:id="@+id/user_img_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_pic" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <Button
                    android:id="@+id/change_pswrd_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/changepassword"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/changePswrdText"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/nameInfo_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/profile_field_left"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/nameText"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/nameInfo_tv"
                    android:layout_weight="0.3"
                    android:background="@drawable/profile_field_right"
                    android:drawableRight="@mipmap/edit"
                    android:ems="8"
                    android:paddingBottom="3dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="3dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/emailInfo_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/profile_field_left"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/emailText"

                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/profile_field_right"
                    android:enabled="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="3dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/userNameInfo_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/profile_field_left"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/userNameText"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/profile_field_right"
                    android:enabled="false"
                    android:paddingBottom="3dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="3dp"
                    android:paddingTop="3dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <Button
                    android:id="@+id/current_loc_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/changepassword"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/currentLocationText"
                    android:textAllCaps="false" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_view"
                android:layout_width="match_parent"

                android:layout_height="200dp"></RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>